search on typing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         </ul>
         <form class="form-inline my-2 my-lg-0" ng-submit="searchProducts(search.name)">
-          <input class="form-control mr-sm-2" ng-model='search.name' type="text" placeholder="Search">
+          <input class="form-control mr-sm-2" ng-change="searchProducts(search.name)" ng-model='search.name' type="text" placeholder="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" >Search</button>
         </form>
       </div>
